--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>I am a header</h1>
+        <img src="https://avatars.githubusercontent.com/u/98444832?v=4">
         Hello there, awesome person!
     </body>
 </html>
