--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
         <h1>I am a header</h1>
         <img src="https://avatars.githubusercontent.com/u/98444832?v=4">
         Hello there, awesome person!
+        <ol>
+            <li>it'sfoss</li>
+            <li>github</li>
+            <li>googlenews</li>
     </body>
 </html>
