--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         Hello there, awesome person!
         <ol>
             <li>it'sfoss</li>
-            <li>github</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
             <li>googlenews</li>
         </ol>
     </body>
